--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="w-full h-96 relative flex items-center">
         <img src="./images/top_bg.jpg" class="absolute top-0 left-0 w-full h-full object-cover bg-green-500" />
 
-        <div class="relative z-10 px-24 text-center bg-green-700 p-10">
+        <div class="relative px-24 text-center bg-green-700 p-10">
             <h2 class="mb-2 text-white uppercase text-2xl md:text-5xl leading-tight tracking-wide font-normal">Blog sur les rencontres, les réunions, <br> les vacances et les rencontres</h2>
             <a href="./index.html" class="inline-block uppercase bg-white py-3 px-6 text-xs mt-5">Apprendre encore plus</a>
         </div>
